--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -19,7 +19,7 @@
               <div id="guia_steps">
                 <h3><i class="fa fa-fw fa-id-card"></i> Sistema de Puntos</h3>
                 <section class="animated fadeIn">
-                  <h2>En el nuevo reglamento se reforzará el sistema de puntos de la capital. Por cada infracción, el automovilista sumará puntos, al acumular 12 se le suspenderá la licencia de conducir y la podrán reexpedir hasta tres años después.</h2>
+                  <h2>En el nuevo reglamento, se reforzará el sistema de puntos de la capital. Por cada infracción, el automovilista sumará puntos, al acumular 12 se le suspenderá la licencia de conducir y la podrá reexpedir hasta tres años después.</h2>
                 </section>
                 <h3><i class="fa fa-fw fa-male"></i> Peatón</h3>
                 <section class="animated fadeIn">
@@ -42,12 +42,12 @@
                 <section class="animated fadeIn">
                   <h4 class="text-uppercase">Puedes ir al corralón por:</h4>
                   <ul class="unordered-list">
-                    <li>Insultar o golpear a agentes de tránsito y serán acreedores de una multa que va de los $1,399.00 a los $2,098.50</li>
+                    <li>Insultar o golpear a agentes de tránsito y serán acreedores de una multa.</li>
                     <li>Circular sobre los carriles exclusivos para el transporte público en el sentido de la vía o en contraflujo.</li>
                     <li>Circular o detenerse en áreas restringidas que estén delimitadas por marcas en el pavimento, como son las vías ciclistas o peatonales.</li>
-                    <li>Las motocicletas serán remitidas cuando el conductor o su acompañante no porte casco protector, además será acreedor de una multa de los $699.50 a los $1,399.00</li>
+                    <li>Las motocicletas serán remitidas cuando el conductor o su acompañante no porte casco protector, además será acreedor de una multa.</li>
                     <li>Se podrá remitir un auto cuando sea estacionado en banquetas, cruces peatonales, vías ciclistas, vías primarias, sobre o debajo de cualquier puente, a un costado de camellones o glorietas, en carriles exclusivos, confinados y/o prioritarios de transporte público, en espacios de servicios especiales destinados al ascenso y descenso de pasajeros.</li>
-                    <li>También frente a bancos, hidrantes para uso de los bomberos, entradas y salidas de vehículos de emergencia, entradas o salidas de estacionamientos públicos y gasolineras; centros escolares y demás centros de concentración masiva que determine la Secretaría; rampas peatonales o de acceso de vehículos; así como en entradas y salidas peatonales de instalaciones de hospitales o centros de salud. La multa por incurrir en alguna de las anteriores va de los $349.75 a los $2,098.50</li>
+                    <li>También frente a bancos, hidrantes para uso de los bomberos, entradas y salidas de vehículos de emergencia, entradas o salidas de estacionamientos públicos y gasolineras; centros escolares y demás centros de concentración masiva que determine la Secretaría; rampas peatonales o de acceso de vehículos; así como en entradas y salidas peatonales de instalaciones de hospitales o centros de salud.</li>
                   </ul>
                   <div class="hr-line-dashed-dark"></div>
                   <h4 class="text-uppercase">Lo que puedes y no puedes hacer al conducir:</h4>
@@ -64,17 +64,17 @@
                         <tbody>
                         <tr>
                           <td class="text-center">Conductores de vehículos de uso particular</td>
-                          <td class="text-center">20 a 40 veces; la multa irá de los $1,399 a los $2,798.00</td>
+                          <td class="text-center">20 a 40 veces</td>
                           <td class="text-center">No aplica</td>
                         </tr>
                         <tr>
                           <td class="text-center">Conductores de vehículos de transporte de carga</td>
-                          <td class="text-center">40 a 60 veces; la multa irá de los $2,798.00 a los $4,197.00 y la remisión del vehículo al depósito</td>
+                          <td class="text-center">40 a 60 veces y la remisión del vehículo al depósito</td>
                           <td class="text-center">No aplica</td>
                         </tr>
                         <tr>
                           <td class="text-center">Conductores de vehículos de transporte público de pasajeros</td>
-                          <td class="text-center">60 a 80 veces; la multa irá de los $4,197.00 a los $5,596.00 y la remisión del vehículo al depósito</td>
+                          <td class="text-center">60 a 80 veces y la remisión del vehículo al depósito</td>
                           <td class="text-center">No aplica</td>
                         </tr>
                         </tbody>
@@ -113,22 +113,22 @@
                     <tbody>
                     <tr>
                       <td class="text-center">1, 2 y 3</td>
-                      <td class="text-center">10 o 20 veces; la multa irá de los $699.50 a los $1,399.00</td>
+                      <td class="text-center">10 o 20 veces</td>
                       <td class="text-center">3 puntos</td>
                     </tr>
                     <tr>
                       <td class="text-center">4, 5 y 6</td>
-                      <td class="text-center">10 o 20 veces; la multa irá de los $699.50 a los $1,399.00</td>
+                      <td class="text-center">10 o 20 veces</td>
                       <td class="text-center">6 puntos</td>
                     </tr>
                     <tr>
                       <td class="text-center">2 y 3 para conductores de vehículos de transporte público de pasajeros y de carga</td>
-                      <td class="text-center">10 o 20 veces; la multa irá de los $699.50 a los $1,399.00</td>
+                      <td class="text-center">10 o 20 veces</td>
                       <td class="text-center">3 puntos</td>
                     </tr>
                     <tr>
                       <td class="text-center">4, 5 y 6 para conductores de vehículos de transporte público de pasajeros y de carga</td>
-                      <td class="text-center">20 a 30 veces; la multa irá de los $1,399.00 a los $2,098.00 $</td>
+                      <td class="text-center">20 a 30 veces</td>
                       <td class="text-center">6 puntos</td>
                     </tr>
                     </tbody>
@@ -177,7 +177,7 @@
                     <li>Hacer base o estacionar su vehículo en lugares no autorizados o prohibidos.</li>
                     <li>Cargar combustible llevando pasajeros a bordo.</li>
                     <li>Llevar vidrios polarizados, obscurecidos o con aditamentos u objetos distintos a las calcomanías reglamentarias.</li>
-                    <li>Si no cuentan con una póliza de seguro, los concesionario de unidad de transporte público de pasajeros serán acreedores de una multa de $2,798.00 hasta los $5,596.00 y la remisión del vehículo al depósito.</li>
+                    <li>Si no cuentan con una póliza de seguro, los concesionario de unidad de transporte público de pasajeros serán acreedores de una multa y la remisión del vehículo al depósito.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
                   <h4 class="text-uppercase">Lo que debes hacer:</h4>
@@ -198,17 +198,17 @@
                 <section class="animated fadeIn">
                   <h4 class="text-uppercase">Puedes ir al corralón por:</h4>
                   <ol type="1">
-                    <li>Por realizar maniobras de carga y descarga fuera de lugares seguros; o afectando el tránsito vehicular. Podrías tener una multa que va de los $6,995.00 hasta los $13,990.00</li>
-                    <li>Hacer base o estacionar su vehículo fuera de un lugar autorizado o de los sitios de encierro o guarda correspondientes. Podrías tener una multa de entre $6,995.00 hasta los $13,990.00</li>
-                    <li>Por circular con carga que exceda el peso permitido. Sería aplicable una multa que podría ir de los $2,798.00 a los $4,197.00</li>
-                    <li>Si no cuentan con una póliza de seguro, los concesionario de unidades de transporte de carga serán sancionados con una multa que podría ir de los $2,798.00 a los $4,197.00</li>
+                    <li>Por realizar maniobras de carga y descarga fuera de lugares seguros; o afectando el tránsito vehicular.</li>
+                    <li>Hacer base o estacionar su vehículo fuera de un lugar autorizado o de los sitios de encierro o guarda correspondientes.</li>
+                    <li>Por circular con carga que exceda el peso permitido.</li>
+                    <li>Si no cuentan con una póliza de seguro.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
                   <h4 class="text-uppercase">Lo que debes hacer:</h4>
                   <ol type="1">
                     <li>Sujetarse estrictamente a circular por las rutas, horarios y los itinerarios de carga y descarga autorizados y dados a conocer por la Secretaría y por Seguridad Pública.</li>
                     <li>Circular por el carril de la extrema derecha y usar el izquierdo sólo para rebasar o dar vuelta a la izquierda.</li>
-                    <li>No podrán circular por carriles centrales y segundos niveles de las vías de acceso controlado cuando se trate de vehículos de peso bruto vehicular de diseño superior a 3,857 Kg o donde el señalamiento restrictivo así lo indique.</li>
+                    <li>No podrán circular por carriles centrales y segundos niveles de las vías de acceso controlado cuando se trate de vehículos de peso bruto vehicular de diseño superior a 3,857 kg o donde el señalamiento restrictivo así lo indique.</li>
                     <li>Realizar maniobras de carga y descarga en lugares seguros y sin afectar o interrumpir el tránsito vehicular.</li>
                     <li>Los conductores de vehículos de transporte de carga deben circular con la carga debidamente asegurada por tensadores para sujetar carga, cintas y/o lonas, que evite tirar objetos o derramar sustancias que obstruyan el tránsito o pongan en riesgo la integridad física de las personas.</li>
                     <li>No deberán circular con pasajeros que viajen en el área de carga.</li>
@@ -222,7 +222,6 @@
                     <li>No se les permite arrojar o descargar en las calles.</li>
                     <li>Abstenerse de realizar paradas que no estén señaladas en la operación del servicio.</li>
                     <li>En caso de congestionamiento vehicular que interrumpa su circulación, el conductor deberá solicitar a los agentes prioridad para continuar su marcha, mostrándoles la documentación que ampare el riesgo sobre el producto que transporta.</li>
-
                   </ol>
                 </section>
 
@@ -518,7 +517,6 @@
               // Behaviour
               autoFocus: true,
           });
-          // $.select2("select");
       });
 
   </script>
