--- a/app/views/simulation_user/new.html.erb
+++ b/app/views/simulation_user/new.html.erb
@@ -13,7 +13,7 @@
                   <label><span class="text-danger">*</span>Fecha de Presentación</label>
                   <div class="input-group date">
                     <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                    <%= f.date_field :fecha, class:"form-control", required:"true", min:"#{DateTime.now}" %>
+                    <%= f.date_field :fecha, class:"form-control", required:"true", min:"#{DateTime.now + 1.day}" %>
                   </div>
                 </div>
                 <div class="form-group">
