--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,6 +7,7 @@
 
 // Google Fonts
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&lang=en");
+@import url("//cdn.materialdesignicons.com/2.2.43/css/materialdesignicons.min.css");
 
 // Bootstra
 @import "bootstrap-sprockets";
