--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
                 </section>
                 <h3><i class="fa fa-fw fa-male"></i> Peatón</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Lo que debes saber:</h4>
+                  <h4 class="text-uppercase"> <i class="fa fa-info-circle"></i> Lo que debes saber:</h4>
                   <ol type="1">
                     <li>Obedecer indicaciones de los policías y la señalización vial.</li>
                     <li>Antes de cruzar una vía, debes voltear a ambos lados de la calle.</li>
@@ -40,7 +40,7 @@
                 </section>
                 <h3><i class="fa fa-fw fa-car"></i> Automovilista</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Puedes ir al corralón por:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-ban"></i> Puedes ir al corralón por:</h4>
                   <ul class="unordered-list">
                     <li>Insultar o golpear a agentes de tránsito y serán acreedores de una multa.</li>
                     <li>Circular sobre los carriles exclusivos para el transporte público en el sentido de la vía o en contraflujo.</li>
@@ -50,7 +50,7 @@
                     <li>También frente a bancos, hidrantes para uso de los bomberos, entradas y salidas de vehículos de emergencia, entradas o salidas de estacionamientos públicos y gasolineras; centros escolares y demás centros de concentración masiva que determine la Secretaría; rampas peatonales o de acceso de vehículos; así como en entradas y salidas peatonales de instalaciones de hospitales o centros de salud.</li>
                   </ul>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">Lo que puedes y no puedes hacer al conducir:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-book"></i> Lo que puedes y no puedes hacer al conducir:</h4>
                   <ul class="unordered-list">
                     <li>Deberás contar con póliza de seguro que ampare la responsabilidad civil por daños a terceros en su persona y en su patrimonio. Las sanciones son:
                       <table class="table table-bordered white-bg">
@@ -92,7 +92,7 @@
                     <li>No deberás transportar mayor número de personas que el señalado, así como llevar a personas en la parte exterior de la carrocería.</li>
                   </ul>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">Límites de velocidad:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-tachometer"></i> Límites de velocidad:</h4>
                   <ol type="1">
                     <li>En los carriles centrales de las vías de acceso controlado la velocidad máxima será de 80 km/h</li>
                     <li>En vías primarias la velocidad máxima era de 70 km/h y ahora será de 50 km/h</li>
@@ -136,7 +136,7 @@
                 </section>
                 <h3><i class="fa fa-fw fa-bicycle"></i> Ciclista</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Lo que debes saber:</h4>
+                  <h4 class="text-uppercase"> <i class="fa fa-info-circle"></i> Lo que debes saber:</h4>
                   <ol type="1">
                     <li>Debes usar aditamentos luminosos, bandas fluorescentes o reflejantes en horario nocturno o circunstancias de poca visibilidad.</li>
                     <li>No podrán manipular un teléfono celular, dispositivos de comunicación o de audio mientras la bicicleta esté en movimiento.</li>
@@ -155,7 +155,7 @@
                 </section>
                 <h3><i class="fa fa-fw fa-motorcycle"></i> Motociclista</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Para conducir motocicleta deberás:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-check"></i> Lo que debes hacer:</h4>
                   <ol type="1">
                     <li>Utilizar un carril completo de circulación.</li>
                     <li>Circular todo el tiempo con las luces traseras y delanteras encendidas.</li>
@@ -171,7 +171,7 @@
                 </section>
                 <h3><i class="fa fa-fw fa-bus"></i> Transporte Público</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Puedes ir al corralón por:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-ban"></i> Puedes ir al corralón por:</h4>
                   <ol type="1">
                     <li>Realizar maniobras de ascenso o descenso de pasajeros en carriles centrales o el de la izquierda.</li>
                     <li>Hacer base o estacionar su vehículo en lugares no autorizados o prohibidos.</li>
@@ -180,7 +180,7 @@
                     <li>Si no cuentan con una póliza de seguro, los concesionario de unidad de transporte público de pasajeros serán acreedores de una multa y la remisión del vehículo al depósito.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">Lo que debes hacer:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-check"></i> Lo que debes hacer:</h4>
                   <ol type="1">
                     <li>Circular por el carril de la extrema derecha, excepto cuando existan vehículos estacionados o exista algún obstáculo, para rebasar a otros vehículos más lentos o se pretenda girar a la izquierda.</li>
                     <li>Esperar el tiempo suficiente para que los pasajeros aborden o desciendan del vehículo; en caso de personas con discapacidad o con movilidad limitada, deben permitir que se instalen en el interior del vehículo o en la acera.</li>
@@ -192,19 +192,19 @@
                     <li>No puedes llevar vidrios polarizados, obscurecidos o con aditamentos u objetos distintos a las calcomanías reglamentarias.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">El transporte escolar también cuenta como transporte público</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-bus"></i> El transporte escolar también cuenta como transporte público</h4>
                 </section>
                 <h3><i class="fa fa-fw fa-truck"></i> Transporte de Carga</h3>
                 <section class="animated fadeIn">
-                  <h4 class="text-uppercase">Puedes ir al corralón por:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-ban"></i> Puedes ir al corralón por:</h4>
                   <ol type="1">
-                    <li>Por realizar maniobras de carga y descarga fuera de lugares seguros; o afectando el tránsito vehicular.</li>
+                    <li>Realizar maniobras de carga y descarga fuera de lugares seguros; o afectando el tránsito vehicular.</li>
                     <li>Hacer base o estacionar su vehículo fuera de un lugar autorizado o de los sitios de encierro o guarda correspondientes.</li>
-                    <li>Por circular con carga que exceda el peso permitido.</li>
+                    <li>Circular con carga que exceda el peso permitido.</li>
                     <li>Si no cuentan con una póliza de seguro.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">Lo que debes hacer:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-check"></i> Lo que debes hacer:</h4>
                   <ol type="1">
                     <li>Sujetarse estrictamente a circular por las rutas, horarios y los itinerarios de carga y descarga autorizados y dados a conocer por la Secretaría y por Seguridad Pública.</li>
                     <li>Circular por el carril de la extrema derecha y usar el izquierdo sólo para rebasar o dar vuelta a la izquierda.</li>
@@ -215,7 +215,7 @@
                     <li>Tienen prohibido circular con carga que exceda el peso permitido al establecido en las normas aplicables.</li>
                   </ol>
                   <div class="hr-line-dashed-dark"></div>
-                  <h4 class="text-uppercase">Para transportar sustancias tóxicas:</h4>
+                  <h4 class="text-uppercase"><i class="fa fa-flask"></i> Para transportar sustancias tóxicas:</h4>
                   <ol type="1">
                     <li>Los conductores de vehículos de transporte de sustancias tóxicas o peligrosas deben asegurarse de que la carga esté debidamente protegida y señalizada de conformidad con las normas oficiales mexicanas.</li>
                     <li>No deberán llevar a bordo personas ajenas a su operación.</li>
