--- a/app/views/quiz_user/index.html.erb
+++ b/app/views/quiz_user/index.html.erb
@@ -65,7 +65,7 @@
                     <div class="col-lg-4"><b>Puntaje:</b></div>
                     <% if quiz.get_estado == 3 %>
                       <% if quiz.puntaje >= 8 %>
-                        <div class="col-lg-8 text-navy"><%= quiz.puntaje %></div>
+                        <div class="col-lg-8 text-success"><%= quiz.puntaje %></div>
                       <% else %>
                         <div class="col-lg-8 text-danger"><%= quiz.puntaje %></div>
                       <% end %>
@@ -86,6 +86,9 @@
                           <% if quiz.puntaje >= 8 && quiz.simulation.blank? %>
                             <%= link_to simulation_user_new_path(quiz.id) do %>
                               <span class="btn btn-xs btn-mg btn-primary"><i class="fa fa-calendar"></i> Agendar Evaluación Práctica</span>
+                            <% end %>
+                            <% elsif if quiz.puntaje >= 8 && !quiz.simulation.blank? %>
+                              <small class="btn-mg">Evaluación Práctica agendada para el <%= "#{quiz.simulation.appointment.fecha.strftime("%d/%m/%Y")}, #{quiz.simulation.appointment.hour.rango_horas}" %></small>
                             <% end %>
                           <% end %>
                           <!--<span class="btn btn-xs btn-mg btn-primary"><i class="fa fa-file-pdf-o"></i> Generar Dictamen</span>-->
